# modality-probe

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  deep_clean.sh  design.md  ekotrace_README.md  fmt.sh  test.sh
alloc-log-report/: Cargo.toml  README.md  build.rs
alloc-log-report/src/: lib.rs
collectors/modality-probe-collector-common/: Cargo.toml
collectors/modality-probe-collector-common/src/: csv.rs  json.rs  lib.rs
collectors/modality-probe-debug-collector/: Cargo.toml  README.md
collectors/modality-probe-debug-collector/src/: cli.rs  completions.rs  lib.rs  main.rs
collectors/modality-probe-debug-collector/tests/empty-example/: Cargo.toml
collectors/modality-probe-debug-collector/tests/symbols-example/: .gitignore  Cargo.toml
collectors/modality-probe-offline-batch-collector/: Cargo.toml  README.md
collectors/modality-probe-offline-batch-collector/src/: completions.rs  lib.rs  main.rs
collectors/modality-probe-offline-batch-collector/tests/: integration_tests.rs
collectors/modality-probe-udp-collector/: Cargo.toml  README.md
collectors/modality-probe-udp-collector/src/: chunked.rs  lib.rs  main.rs  opts.rs
debian-package/: Cargo.toml  build.sh
doc/: design.md  (+1 more)
ekotrace/: Cargo.toml  README.md  build.rs
ekotrace-analysis/: Cargo.toml  README.md
ekotrace-analysis/src/: lib.rs  main.rs  model.rs
ekotrace-capi/: Cargo.toml  README.md
ekotrace-capi-impl/: Cargo.toml
ekotrace-capi-impl/src/: lib.rs
ekotrace-capi/ctest/: .gitignore  build  build_and_run  noop.c  test.c
ekotrace-capi/ekotrace-capi-impl/: Cargo.toml  README.md
ekotrace-capi/ekotrace-capi-impl/src/: lib.rs
ekotrace-capi/include/: ekotrace.h
ekotrace-capi/src/: lib.rs
ekotrace-cli/: Cargo.toml  README.md
ekotrace-cli/src/: analysis.rs  error.rs  events.rs  export.rs  header_gen.rs  lang.rs  lib.rs  main.rs  manifest_gen.rs  tracers.rs
ekotrace-cli/src/manifest_gen/: c_parser.rs  event_metadata.rs  file_path.rs  in_source_event.rs  in_source_tracer.rs  invocations.rs  mod.rs  parser.rs  rust_parser.rs  source_location.rs  tracer_metadata.rs  type_hint.rs
ekotrace-debug-collector/: Cargo.toml
ekotrace-debug-collector/src/: cli.rs  lib.rs  main.rs
ekotrace-debug-collector/tests/: example-be  example-le
ekotrace-debug-collector/tests/symbols-example/: Cargo.toml
ekotrace-debug-collector/tests/symbols-example/src/: main.rs
ekotrace-event-manifest-gen/: Cargo.toml
ekotrace-event-manifest-gen/src/: events.rs  main.rs
ekotrace-graph/: Cargo.toml
ekotrace-graph/src/: digraph.rs  graph_event.rs  lib.rs  meta.rs
ekotrace-header-gen/: .gitignore  Cargo.toml  README.md
ekotrace-header-gen/src/: main.rs
ekotrace-udp-collector/: Cargo.toml  README.md
ekotrace-udp-collector/src/: chunked.rs  lib.rs  main.rs
ekotrace/src/: byte_util.rs  compact_log.rs  error.rs  history.rs  id.rs  lib.rs  slice_vec.rs
ekotrace/tests/: integration_tests.rs
examples/rust-example/: .gitignore  Cargo.toml  build.rs
examples/rust-example/src/: main.rs
examples/rust-example/tests/: integration.rs
modality-probe-capi/: .gitignore  Cargo.toml  README.md  build.rs
modality-probe-capi/ctest/: .gitignore  Makefile  build  build_and_run  noop.c  test.c
modality-probe-capi/include/: probe.h
modality-probe-capi/modality-probe-capi-impl/: .gitignore  Cargo.toml  README.md
modality-probe-capi/modality-probe-capi-impl/src/: lib.rs
modality-probe-capi/modality-probe-capi-impl/tests/: integration_tests.rs
modality-probe-capi/src/: lib.rs
modality-probe-cli/: Cargo.toml  README.md
modality-probe-cli/src/: analysis.rs  completions.rs  component.rs  component_dir.rs  description_format.rs  error.rs  events.rs  export.rs  header_gen.rs  lib.rs  log.rs  main.rs  meta.rs  opts.rs  probes.rs  tracers.rs
modality-probe-cli/src/export/: graph.rs  mod.rs  templates.rs
modality-probe-cli/src/graph/: digraph.rs  graph_event.rs  meta.rs  mod.rs
modality-probe-cli/src/log/: color.rs  format.rs  graph.rs  mod.rs  radius.rs
modality-probe-cli/src/manifest_gen/: c_parser.rs  event_metadata.rs  id_gen.rs  in_source_event.rs  in_source_probe.rs  invocations.rs  mod.rs  parser.rs  probe_metadata.rs  rust_parser.rs  source_location.rs  tracer_metadata.rs
modality-probe-cli/src/visualize/: graph.rs  mod.rs  templates.rs
modality-probe-cli/tests/: export.rs  stable_uuid.rs  test_helpers.rs
modality-probe-cli/tests/fixtures/: test-log.jsonl
modality-probe-cli/tests/fixtures/test-component-empty/: probes.csv
modality-probe-debug-collector/: Cargo.toml
modality-probe-debug-collector/src/: cli.rs  lib.rs  main.rs
modality-probe-debug-collector/tests/: example-be-elf
modality-probe-debug-collector/tests/symbols-example/: Cargo.toml  memory.x
modality-probe-graph/: Cargo.toml  README.md
modality-probe-graph/src/: digraph.rs  lib.rs
modality-probe-udp-collector/: Cargo.toml
modality-probe-udp-collector/src/: chunked.rs  completions.rs  lib.rs  main.rs  opts.rs
race-buffer/: .gitignore  Cargo.toml
race-buffer/model/: Makefile  RaceBuffer.cfg  RaceBuffer.tla  SequenceNumbers.tla
race-buffer/src/: async_reader.rs  buffer.rs  lib.rs  reader.rs  util.rs  writer.rs
test-support/proc-graph/: Cargo.toml  README.md
test-support/proc-graph/examples/: lattice.rs
test-support/proc-graph/src/: lib.rs
truce/: Cargo.toml  README.md  build.rs  fmt.sh  test.sh
truce-udp-collector/: Cargo.toml  build.rs
truce-udp-collector/alloc-log-report/: Cargo.toml  build.rs
truce-udp-collector/alloc-log-report/src/: lib.rs
truce-udp-collector/src/: lib.rs  main.rs
truce/schemas/: in_system.lcm  log_reporting.lcm
truce/src/: compact_log.rs  history.rs  lib.rs
truce/tests/: integration_tests.rs
truce/truce-c/: Cargo.toml
truce/truce-c/ctest/: build  build_and_run  test.c
truce/truce-c/include/: trucec.h
truce/truce-c/src/: lib.rs
truce/truce-udp-collector/: Cargo.toml  build.rs
truce/truce-udp-collector/src/: lib.rs  main.rs
util/: Cargo.toml  README.md  build.rs
util/src/: alloc_log_report.rs  alloc_snapshot.rs  lib.rs  model.rs
(+88 files in other folders)
