[package]
name = "modality-probe"
version = "0.3.0"
authors = [
    "Zachary Pierce <zack@auxon.io>",
    "Russell Mull <russell@auxon.io>",
    "dan pittman <dan@auxon.io>",
    "Jon Lamb <jon@auxon.io>"
]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/auxoncorp/modality-probe"
readme = "README.md"

[features]
default = []
std = ["serde", "proptest", "schemars"]
debug-collector-access = ["field-offset"]

[workspace]
members = [
    "modality-probe-cli",
    "modality-probe-graph",
    "collectors/modality-probe-udp-collector",
    "collectors/modality-probe-debug-collector",
    "collectors/modality-probe-collector-common",
    "collectors/modality-probe-offline-batch-collector",
    "fenced-ring-buffer",
]
exclude = [
    "./package",
    "./collectors",
    "examples/rust-example",
    "examples/c-example",
]

[dependencies]
static_assertions = "1.1.0"
fixed-slice-vec = "0.7.1"
fenced-ring-buffer = { path = "./fenced-ring-buffer" }

# Used if the std feature is enabled.
serde = { version = "1.0", features = ["derive"], optional = true }
proptest = { version = "0.10.1", optional = true , default-features = false, features = ["std"]}
schemars = { version = "0.6.5", optional = true }

# Used if the debug-collector-access feature is enabled
field-offset = { version = "0.3.1", optional = true }
