[package]
name = "alloc-log-report"
version = "0.2.0"
authors = ["Zachary Pierce <zack@auxon.io>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/auxoncorp/ekotrace"

[lib]
name = "alloc_log_report"

[dependencies]
rust-lcm-codec = "0.2"

[build-dependencies]
rust-lcm-codegen = "0.2"
