[package]
name = "ekotrace-analysis"
version = "0.2.0"
authors = ["Russell Mull <russell@auxon.io>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/auxoncorp/ekotrace"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
csv = "1.1"
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.8.2"
structopt = "0.3"
petgraph = "0.5.0"

[dev-dependencies]
proptest = "0.9.4"

[lib]
name = "ekotrace_analysis"
path = "src/lib.rs"
