[package]
name = "ekotrace-capi"
version = "0.1.0"
authors = ["Zachary Pierce <zack@auxon.io>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/auxoncorp/ekotrace"

[lib]
name = "ekotrace_capi"
crate-type = ["staticlib", "cdylib"]

[dependencies]
ekotrace-capi-impl = { path = "../ekotrace-capi-impl" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace]
