[package]
name = "ekotrace-debug-collector"
version = "0.1.0"
authors = ["Nicholas Springer <nicholas.m.springer@gmail.com>"]
edition = "2020"

[dependencies]
probe-rs = "0.6.2"
goblin = "0.2.3"
chrono = { version = "0.4", features = ["serde"] }

ekotrace = { path = ".." }
util = { path = "../util" }
ekotrace-udp-collector = { path = "../ekotrace-udp-collector" }

[dependencies.race-buffer]
path = "/home/nicholas/auxon/nick-demo/race-buffer"

