[package]
name = "ekotrace-debug-collector"
version = "0.1.0"
authors = ["Nicholas Springer <nicholas.m.springer@gmail.com>"]
edition = "2018"

[dependencies]
probe-rs = "0.6.2"
goblin = "0.2.3"
chrono = { version = "0.4", features = ["serde"] }
structopt = "0.3"
parse_duration = "2.1.0"

ekotrace = { path = ".." }
util = { path = "../util" }
ekotrace-udp-collector = { path = "../ekotrace-udp-collector" }
race-buffer = { path = "../race-buffer" }

