[package]
name = "ekotrace-event-manifest-gen"
version = "0.1.0"
authors = ["Jon Lamb <jon@auxon.io>"]
edition = "2018"

[dependencies]
csv = "1.1"
structopt = "0.3"
walkdir = "2.3"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.nom]
version = "5.0"
default-features = false
features = []
