[package]
name = "ekotrace-graph"
version = "0.1.0"
authors = ["dan pittman <dan@auxon.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
petgraph = "0.5.1"
err-derive = "0.2.4"
