[package]
name = "ekotrace-header-gen"
version = "0.2.0"
authors = ["Russell Mull <russell@auxon.io>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/auxoncorp/ekotrace"
readme = "README.md"

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
structopt = "0.3"
sha2 = "0.8"
