[package]
name = "ekotrace"
version = "0.2.0"
authors = ["Zachary Pierce <zack@auxon.io>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/auxoncorp/ekotrace"

[dependencies]
static_assertions = "1.1.0"
rust-lcm-codec = { git = "ssh://git@github.com/auxoncorp/rust-lcm-codec.git", branch = "master"}

[dev-dependencies]
alloc-log-report = { path = "../alloc-log-report" }

[build-dependencies]
rust-lcm-codegen = { git = "ssh://git@github.com/auxoncorp/rust-lcm-codec.git", branch = "master"}
