[package]
name = "ekotrace"
version = "0.2.0"
authors = ["Zachary Pierce <zack@auxon.io>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/auxoncorp/ekotrace"
readme = "README.md"

[dependencies]
static_assertions = "1.1.0"
rust-lcm-codec = "0.2"
fixed-slice-vec = "0.2"

[dev-dependencies]
alloc-log-report = { path = "../alloc-log-report" }

[build-dependencies]
rust-lcm-codegen = "0.2"
