[package]
name = "modality-probe-cli"
version = "0.2.0"
authors = [
    "Zachary Pierce <zack@auxon.io>",
    "Russell Mull <russell@auxon.io>",
    "Jon Lamb <jon@auxon.io>"
]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/auxoncorp/modality-probe"
readme = "README.md"

[[bin]]
name = "modality-probe"
path = "src/main.rs"

[lib]
name = "modality_probe_cli"
path = "src/lib.rs"

[dependencies]
csv = "1.1"
structopt = "0.3"
walkdir = "2.3"
itertools = "0.8.2"
petgraph = "0.5.0"
sha2 = "0.8"
nom_locate = "2.0"

[dependencies.modality-probe]
path = "../"

[dependencies.util]
path = "../util"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.nom]
version = "5.0"
default-features = false
features = []

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dev-dependencies]
proptest = "0.9"
pretty_assertions = "0.6"
