[package]
name = "modality-probe-cli"
version = "0.3.0"
authors = [
    "Zachary Pierce <zack@auxon.io>",
    "Russell Mull <russell@auxon.io>",
    "Jon Lamb <jon@auxon.io>"
]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/auxoncorp/modality-probe"
readme = "README.md"
default-run = "modality-probe"

[[bin]]
name = "modality-probe"
path = "src/main.rs"

[[bin]]
name = "modality-probe-completions"
path = "src/completions.rs"
test = false

[lib]
name = "modality_probe_cli"
path = "src/lib.rs"

[dependencies]
csv = "1.1"
structopt = "0.3"
walkdir = "2.3"
sha2 = "0.8"
nom_locate = "2.0"
toml = "0.5"
sha3 = "0.9"
hex = "0.4"
derivative = "2.1"
err-derive = "0.2.4"

[dependencies.modality-probe]
path = "../"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.nom]
version = "5.0"
default-features = false
features = []

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.uuid]
version = "0.8"
features = ["serde", "v4"]

[dev-dependencies]
pretty_assertions = "0.6"
tempfile = "3.1"
