[package]
name = "modality-probe-cli"
version = "0.3.0"
authors = [
    "Zachary Pierce <zack@auxon.io>",
    "Russell Mull <russell@auxon.io>",
    "Jon Lamb <jon@auxon.io>",
    "dan pittman <dan@auxon.io>"
]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/auxoncorp/modality-probe"
readme = "README.md"
default-run = "modality-probe"

[[bin]]
name = "modality-probe"
path = "src/main.rs"

[[bin]]
name = "modality-probe-completions"
path = "src/completions.rs"
test = false

[lib]
name = "modality_probe_cli"
path = "src/lib.rs"

[dependencies]
csv = "1.1"
structopt = { version = "0.3", features = ["color"] }
walkdir = "2.3"
nom_locate = "2.0"
toml = "0.5"
sha3 = "0.9"
hex = "0.4"
derivative = "2.1"
err-derive = "0.3"
colorous = "1.0.3"
colored = "2"
tinytemplate = "1.1.0"
lazy_static = "1.4.0"

modality-probe-collector-common = { path = "../collectors/modality-probe-collector-common" }
modality-probe-graph = { path = "../modality-probe-graph" }

[dependencies.modality-probe]
path = "../"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[dependencies.nom]
version = "5.0"
default-features = false
features = []

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.uuid]
version = "0.8"
features = ["serde", "v4"]

[dependencies.dynfmt]
version = "0.1.5"
default-features = false
features = ["curly"]

# Used to prevent panics on broken pipes.
# See:
#   https://github.com/rust-lang/rust/issues/46016#issuecomment-605624865
[target.'cfg(target_family = "unix")'.dependencies]
nix = "0.20.0"

[dev-dependencies]
pretty_assertions = "0.7"
tempfile = "3.1"
proptest = { version = "1.0", default-features = false, features = ["std"]}
modality-probe-graph = { path = "../modality-probe-graph", features = ["test_support"] }
