[package]
name = "modality-probe-graph"
version = "0.1.0"
authors = ["dan pittman <dan@auxon.io>"]
edition = "2018"

[features]
default = []
test_support = ["chrono"]

[dependencies]
err-derive = "0.3"
chrono = {optional = true, version = "0.4"}

modality-probe = { path = "../" }
modality-probe-collector-common = { path = "../collectors/modality-probe-collector-common" }
