[package]
name = "race-buffer"
version = "0.1.0"
authors = ["Nicholas Springer <nicholas.m.springer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = {version = "0.7.3", optional = true}
rand = {version = "0.7.3", optional = true}

[features]
default = []
std = ["crossbeam", "rand"]