[package]
name = "truce-udp-collector"
version = "0.1.0"
authors = ["Zachary Pierce <zack@auxon.io>"]
edition = "2018"

[lib]
name = "truce_udp_collector"
path = "src/lib.rs"

[[bin]]
name = "truce-udp-collector-cli"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rust-lcm-codec = { git = "ssh://git@github.com/auxoncorp/rust-lcm-codec.git", branch = "master"}
static_assertions = "1.1.0"
truce-analysis = { path = "../truce-analysis" }

[build-dependencies]
rust-lcm-codegen = { git = "ssh://git@github.com/auxoncorp/rust-lcm-codec.git", branch = "master"}

[dev-dependencies]
crossbeam = "0.7.3"
proptest = "0.9.4"
tempfile = "3"
