[package]
name = "truce"
version = "0.1.0"
authors = ["Zachary Pierce <zack@auxon.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.5.1", default-features = false }
arr_macro = "0.1.3"
static_assertions = "1.1.0"

[build-dependencies]
