[package]
name = "modality-probe-collector-common"
version = "0.1.0"
authors = ["dan pittman <dan@auxon.io>"]
edition = "2018"

[dependencies]
static_assertions = "1.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
err-derive = "0.2.4"

modality-probe = { path = "../../", features = ["std"] }
fenced-ring-buffer = { path = "../../fenced-ring-buffer" }

[dev-dependencies]
proptest = { version = "0.10.1", default-features = false, features = ["std"]}
pretty_assertions = "0.6"
