[package]
name = "modality-probe-debug-collector"
version = "0.1.0"
authors = ["Nicholas Springer <nspringer@auxon.io>"]
edition = "2018"

[[bin]]
name = "modality-probe-debug-collector"
path = "src/main.rs"

[[bin]]
name = "modality-probe-debug-collector-completions"
path = "src/completions.rs"
test = false

[lib]
name = "modality_probe_debug_collector"
path = "src/lib.rs"

[dependencies]
goblin = "0.2.3"
chrono = { version = "0.4", features = ["serde"] }
structopt = "0.3"
parse_duration = "2.1.0"
probe-rs = "0.8"
maplit = "1.0.2"
tempfile = "3.1.0"
err-derive = "0.2.4"
ctrlc = "3.1.6"
crossbeam-channel = "0.4.3"
pretty_assertions = "0.6"

fenced-ring-buffer = { path = "../../fenced-ring-buffer", features = ["std"] }
modality-probe = { path = "../..", features = ["debug-collector-access"] }
modality-probe-collector-common = { path = "../modality-probe-collector-common" }
