[package]
name = "rust-example"
version = "0.1.0"
authors = ["Jon Lamb <jon@auxon.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
crossbeam = "0.7"
rand = "0.7"
log = "0.4"
env_logger = "0.7"

[dependencies.modality-probe]
path = "../../"

[target.'cfg(target_family = "unix")'.dev-dependencies]
nix = "0.18"
