[package]
name = "modality-probe-capi-impl"
version = "0.3.0"
authors = ["Zachary Pierce <zack@auxon.io>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/auxoncorp/modality-probe"
readme = "README.md"
workspace = ".."

[lib]
name = "modality_probe_capi_impl"
# Note that we intentionally separate out the staticlib and cydlib
# crate types into modality-probe-capi to avoid the pain of panic handler
# definition conflicts
crate-type = ["lib"]

[dependencies]
static_assertions = "1.1.0"
modality-probe = { path = "../../" }

[build-dependencies]

[dev-dependencies]
proptest = "0.9.5"

[features]
default = []
# Turn on `no_mangle` attribute
no_mangle = []
