[package]
name = "alloc-log-report"
version = "0.1.0"
authors = ["Zachary Pierce <zack@auxon.io>"]
edition = "2018"

[lib]
name = "alloc_log_report"

[dependencies]
rust-lcm-codec = { git = "ssh://git@github.com/auxoncorp/rust-lcm-codec.git", branch = "master"}

[build-dependencies]
rust-lcm-codegen = { git = "ssh://git@github.com/auxoncorp/rust-lcm-codec.git", branch = "master"}
